--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,14 @@ body {
   font-family: Arial, Helvetica;
   letter-spacing: 0.02em;
   font-weight: 400;
-  -webkit-font-smoothing: antialiased; 
+  -webkit-font-smoothing: antialiased;  
 }
+
+/* @media only screen and (min-width: 950px) {
+  body {
+    overflow: hidden;
+  }
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -30,24 +36,38 @@ code {
   gap: 0px 0px;
   grid-auto-flow: row;
 }
-.game-name { grid-area: 1 / 1 / 2 / 4; }
+.game-name { grid-area: 1 / 1 / 2 / 4; 
+  background: -webkit-linear-gradient(#fbbd47, #e25822);
+  
+}
 
-.ads { grid-area: 2 / 1 / 2 / 4; }
+.ads { grid-area: 2 / 1 / 2 / 4; 
+  
+ }
 
-.lives { grid-area: 3 / 1 / 3 / 2; }
+.lives { 
+  grid-area: 3 / 1 / 3 / 2; 
+  background: #e25822
+}
 
-.score { grid-area: 3 / 2 / 3 / 3; }
+.score { 
+  grid-area: 3 / 2 / 3 / 3; 
+  background: #e25822
+}
 
-.gold { grid-area: 3 / 3 / 3 / 4; }
+.gold { 
+  grid-area: 3 / 3 / 3 / 4;
+  background: #e25822
+}
 
-html, body , .container {
+html, body, .container {
   height: 100%;
   margin: 0;
 }
 
 .container * {
   margin: 15px 50px;
-  border: 5px solid #fc7800;
+  border: 5px solid #e25822;
   padding: 20px;
   color: #fff;
   font-family: Architects Daughter;
@@ -55,4 +75,129 @@ html, body , .container {
   font-weight: 700;
 }
 
+
+.ant-popover {
+  background-color: #e25822 !important; 
+  height: 550px !important;
+}
+
+.ant-popover-title {
+  background-color: #e25822 !important; 
+  text-align: center !important;
+  color: #fff !important;
+  font-size: 15px !important;
+}
+
+.ant-popover-inner-content {
+  background-color: #e25822 !important; 
+  text-align: center !important;
+  color: #fff !important;
+  font-size: 15px !important;
+}
+
+.ant-popover-arrow-content {
+  background-color: #e25822 !important; 
+}
+
+
+/* Modal */
+
+.ant-modal-header {
+  background-color: #fbbd47 !important;
+  
+}
+
+.ant-modal-title {
+  color: #e25822 !important;
+  
+}
+
+.ant-modal-body {
+  background-color: #e25822 !important;
+}
+
+.ant-modal-footer { 
+  background-color: #fbbd47 !important;
+}
+.ant-btn {
+  background-color: #e25822 !important;
+  color: #fff !important; 
+}
+
+/* Cards */
+
+.card {
+  margin: 20px;
+  padding: 20px;
+  width: 800px;
+  min-height: 200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  background-color: #fbbd47 !important;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+}
+
+.card:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
+}
+
+.card__link,
+.card__exit,
+.card__icon {
+  position: relative;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.card__link::after {
+  position: absolute;
+  top: 25px;
+  left: 0;
+  content: "";
+  width: 0%;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.6);
+  transition: all 0.5s;
+}
+
+.card__link:hover::after {
+  width: 100%;
+}
+
+.card__exit {
+  grid-row: 1/2;
+  justify-self: end;
+}
+
+.card__icon {
+  grid-row: 2/3;
+  font-size: 30px;
+}
+
+.card__title {
+  grid-row: 3/4;
+  font-weight: 400;
+  color: #ffffff;
+  margin-top: -50px;
+}
+
+.card__apply {
+  grid-row: 4/5;
+  align-self: center;
+}
+
+.card-1 {
+  /* background: radial-gradient(#1fe4f5, #3fbafe); */
+  background-color: #fbbd47 !important;
+}
+
+@media (max-width: 1600px) {
+  .cards {
+    justify-content: center;
+  }
+}
 
