--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/* Commonly used vars */
+:root {
+  --dragonColorCode: #e25822;
+  --goldColorCode: #fbbd47;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,6 +22,7 @@ body {
   letter-spacing: 0.02em;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;  
+  text-align: center;
 }
 
 /* @media only screen and (min-width: 950px) {
@@ -41,7 +48,7 @@ code {
 }
 
 .game-name { grid-area: 1 / 1 / 2 / 4; 
-  background: -webkit-linear-gradient(#fbbd47, #e25822);
+  background: -webkit-linear-gradient(var(--goldColorCode), var(--dragonColorCode));
 }
 
 .ads { 
@@ -50,17 +57,17 @@ code {
 
 .lives { 
   grid-area: 3 / 1 / 3 / 2; 
-  background: #e25822
+  background: var(--dragonColorCode);
 }
 
 .score { 
   grid-area: 3 / 2 / 3 / 3; 
-  background: #e25822
+  background: var(--dragonColorCode);
 }
 
 .gold { 
   grid-area: 3 / 3 / 3 / 4;
-  background: #e25822
+  background: var(--dragonColorCode);
 }
 
 html, body, .container {
@@ -82,58 +89,58 @@ html, body, .container {
 /* Popover */
 
 .ant-popover {
-  background-color: #e25822 !important; 
+  background-color: var(--dragonColorCode) !important; 
   height: 550px !important;
 }
 
 .ant-timeline-item-content {
-  color: #fbbd47 !important;
+  color: var(--goldColorCode) !important;
 }
 
 .ant-popover-title {
-  background-color: #e25822 !important; 
+  background-color: var(--dragonColorCode) !important; 
   text-align: center !important;
-  color: #fbbd47 !important;
+  color: var(--goldColorCode) !important;
   font-size: 15px !important;
 }
 
 .ant-popover-inner-content {
-  background-color: #e25822 !important; 
+  background-color: var(--dragonColorCode) !important; 
   text-align: center !important;
-  color: #fbbd47 !important;
+  color: var(--goldColorCode) !important;
   font-size: 15px !important;
 }
 
 .ant-popover-arrow-content {
-  background-color: #e25822 !important; 
+  background-color: var(--dragonColorCode) !important; 
 }
 
 
 /* Modal */
 
 .ant-modal-header {
-  background-color: #fbbd47 !important;
+  background-color: var(--goldColorCode) !important;
 }
 
 .ant-modal-title {
-  color: #e25822 !important;
+  color: var(--dragonColorCode) !important;
 }
 
 .ant-modal-body {
-  background-color: #e25822 !important;
+  background-color: var(--dragonColorCode) !important;
 }
 
 .ant-modal-footer { 
-  background-color: #fbbd47 !important;
+  background-color: var(--goldColorCode) !important;
 }
 
 .ant-btn {
-  background-color: #e25822 !important;
+  background-color: var(--dragonColorCode) !important;
   color: #fff !important; 
 }
 
 .ant-modal-centered {
-  border: 5px solid #fbbd47 !important;
+  border: 5px solid var(--goldColorCode) !important;
 }
 
 /* Cards */
@@ -146,7 +153,7 @@ html, body, .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
-  background-color: #fbbd47 !important;
+  background-color: var(--goldColorCode) !important;
   border-radius: 10px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
   transition: all 0.2s;
@@ -204,7 +211,7 @@ html, body, .container {
 
 .card-1 {
   /* background: radial-gradient(#1fe4f5, #3fbafe); */
-  background-color: #fbbd47 !important;
+  background-color: var(--goldColorCode) !important;
 }
 
 @media (max-width: 1600px) {
@@ -216,14 +223,14 @@ html, body, .container {
 /* Drawer */
 
 .ant-drawer-header {
-  background-color: #e25822 !important; 
+  background-color: var(--dragonColorCode) !important; 
   text-align: center !important;
-  color: #fbbd47 !important;
+  color: var(--goldColorCode) !important;
   font-size: 15px !important;
 }
 
 .ant-drawer-title {
-  color: #fbbd47 !important;
+  color: var(--goldColorCode) !important;
   font-size: 28px !important; 
   font-weight: 400 !important;
 
@@ -237,9 +244,9 @@ html, body, .container {
 }
 
 .ant-drawer-body {
-  background-color: #fbbd47 !important; 
+  background-color: var(--goldColorCode) !important; 
   text-align: center !important;
-  color: #e25822 !important;
+  color: var(--dragonColorCode) !important;
   font-size: 15px !important;
   border-radius: 5px !important;
 }
@@ -254,7 +261,7 @@ html, body, .container {
   overflow: visible; /* For IE */
     height: 30px;
     border-style: solid;
-    border-color: #e25822;
+    border-color: var(--dragonColorCode);
     border-width: 1px 0 0 0;
     border-radius: 20px;
 }
@@ -265,7 +272,7 @@ html, body, .container {
     height: 30px;
     margin-top: -31px;
     border-style: solid;
-    border-color: #e25822;
+    border-color: var(--dragonColorCode);
     border-width: 0 0 1px 0;
     border-radius: 20px;
 }
@@ -296,15 +303,15 @@ html, body, .container {
 }  */
 
 .flex-row-item {
-background-color: #f76707;
-border: 1px solid #fbbd47;
+background-color: var(--dragonColorCode);
+border: 1px solid var(--goldColorCode);
 border-radius: 10px;
 }
 
 .flex-row-container > .flex-row-item-one {
   flex: 100%;
-  background-color: #f76707;
-  border: 1px solid #fbbd47;
+  background-color: var(--dragonColorCode);
+  border: 1px solid var(--goldColorCode);
   border-radius: 10px;
   box-shadow: 0 0 0 1px black;
   margin-bottom: 10px;
@@ -322,7 +329,7 @@ border-radius: 10px;
 }
 
 .ant-popover-message-title {
-  color: #fbbd47 !important;
+  color: var(--goldColorCode) !important;
 }
 
 .ant-popover-buttons button {
@@ -330,12 +337,12 @@ border-radius: 10px;
 }
 
 .ant-popover-buttons button:hover {
-  border: 1px solid #fbbd47;
+  border: 1px solid var(--goldColorCode);
 }
 
 /* Messages */
 .ant-message-notice-content {
-  /* background: #fbbd47 !important; */
+  /* background: var(--goldColorCode) !important; */
 
 }
 
@@ -367,11 +374,11 @@ border-radius: 10px;
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #e25822; 
+  background: var(--dragonColorCode); 
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #e25822; 
+  background: var(--dragonColorCode); 
 }
