--- a/src/index.css
+++ b/src/index.css
@@ -295,9 +295,14 @@ html, body, .container {
   }
 }
 
+/* @media only screen and (max-width: 960px) {
+  .flex-row-container > .flex-row-item {
+    flex-direction: column;
+  }
+} */
+
 .flex-row-container > .flex-row-item {
   flex: 40%; /* or - flex: 0 50% - or - flex-basis: 50% - */
-
   margin-bottom: 10px;
   margin-right: 10px;
   height: 150px;
